# roboeyes-python

./: .gitignore  INSTALL.md  pyproject.toml  readme.md  requirements.txt
docs/: API_DOCUMENTATION.md  INPUT_CONTROLS.md  PERFORMANCE_OPTIMIZATION.md  TROUBLESHOOTING.md  emotion_animation_integration_guide.md  emotion_api_documentation.md  emotion_integration_quick_reference.md  team_integration_guide.md
examples/: README.md  __init__.py  config_hot_reload_demo.py  desktop_animation_sequence.py  desktop_basic.py  desktop_config_demo.py  desktop_interactive.py  desktop_performance_demo.py  emotion_config_demo.py  emotion_system_usage_demo.py  healthcare_animation_demo.py  ollama_integration_example.py  realtime_emotion_chaining_demo.py  simple_emotion_integration.py  team_integration_guide.py
src/: __init__.py
src/desktop/: __init__.py  config.py  exceptions.py  framebuffer.py  graphics.py  input_manager.py  logging.py  performance.py  platform_compat.py  sequences.py  timing.py
src/roboeyes/: __init__.py  desktop_roboeyes.py  emotion_animation.py  emotion_animation_streamlined.py
